--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
+body {
+  font-family: "Lato", "sans-serif" !important;
+  font-size: 14px !important;
+  font-weight: 400;
+  line-height: 17px !important;
+  color: #ff4438 !important;
+  background-color: #fff !important;
+  width: 100% !important;
+}
+a {
+  color: #3a57e8;
+  --bs-link-color: #3a57e8 !important;
+  transition: color 0.2s ease-in-out;
+  text-decoration: none !important;
+}
+a:hover {
+  color: #3a57e8;
+  text-decoration: none !important;
+}
+.logheader {
+  color: #000;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 36px;
+}
+.subtext {
+  color: #232d42;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+.logsubtext {
+  color: #8a92a6;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+input[type="text"],
+input[type="password"] {
+  font: inherit;
+  font-size: 16px !important;
+  border-radius: 4px !important;
+  background-color: #fff !important;
+  border: 1px solid #ff4438 !important;
+  outline: 2px solid #fff !important;
+  box-shadow: none !important;
+  color: #000;
+  height: 38px;
+  line-height: 1.7 !important;
+}
+input[type="text"]:focus,
+input[type="password"]:focus {
+  box-shadow: 0 0 0 0 !important;
+  border: 1px solid #ff4438 !important;
+  outline: 2px solid #ff4438 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn {
+  color: #fff !important;
+  background-color: #ff4438 !important;
+  border: 2px solid #ff4438 !important;
+  outline: 2px solid #ff4438 !important;
+  border-radius: 6px;
+  height: 45px !important;
+  min-width: 185px !important;
+  white-space: nowrap;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover,
+.btn:focus {
+  border: 2px solid #fff !important;
+  outline: 2px solid #ff4438 !important;
 }
